syntax = "proto3";

package commits;

option go_package="/commits";

service CommitsService{
    rpc GetRepoCommitMetaData (RepoCommitMetaDataRequest) returns (RepoCommitMetaDataResponse);
}


message RepoCommitMetaDataRequest{
    string repositoryName = 1;
}

message RepoCommitMetaDataResponse{
    string lastFetchTime = 1;
}
